# backend/src/routes/user.js
@@ -12,6 +12,8 @@ router.post('/login', user.logIn);
 
 router.get('/user/game', user.verificationUser, user.checkWhereIAm)
 
+router.get('/user/status', user.verificationUser, user.getRole)
+
 // router.post('/createSession', user.newSession);
 
 // router.delete('/createSession', user.deleteSession);
